plugins {
    id 'java'
    id 'application'
    id 'checkstyle'
    id 'jacoco'
    id 'com.bakdata.mockito' version '1.9.0'
    id 'gg.jte.gradle' version '3.1.15'
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.7'
}

check.dependsOn checkstyleMain

group = 'ru.mentee.power'
version = '1.0-SNAPSHOT'

bootRun {
    mainClass = "ru.mentee.power.crm.spring.Application"  // имя твоего Spring Boot класса
}

ext {
    junitVersion = '5.11.0'
    assertjVersion = '3.26.3'
    lombokVersion = '1.18.42'
    servletVersion = '6.1.0'
    tomcatVersion = '11.0.1'
    jteVersion = '3.1.16'
    springBootVersion = '3.5.7'
    jteSpringBootVersion = '3.1.16'
    validationApiVersion = '3.1.1'
    hibernateValidatorVersion = '9.1.0.Final'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

application {
    mainClass = 'ru.mentee.power.crm.Main'

}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation "org.junit.jupiter:junit-jupiter:${junitVersion}"
    testImplementation "org.assertj:assertj-core:${assertjVersion}"
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    testImplementation 'org.mockito:mockito-core:5.14.2'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.14.2'

    implementation 'net.bytebuddy:byte-buddy:1.17.6'
    implementation 'net.bytebuddy:byte-buddy-agent:1.17.6'

    testImplementation 'net.bytebuddy:byte-buddy:1.17.6'
    testImplementation 'net.bytebuddy:byte-buddy-agent:1.17.6'

    implementation "jakarta.servlet:jakarta.servlet-api:${servletVersion}"
    implementation "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}"

    implementation "gg.jte:jte:${jteVersion}"
    implementation "gg.jte:jte-runtime:${jteVersion}"

    implementation "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    implementation "gg.jte:jte-spring-boot-starter-3:${jteSpringBootVersion}"
    implementation "gg.jte:jte:${jteVersion}"

    implementation "jakarta.validation:jakarta.validation-api:${validationApiVersion}"
    implementation "org.hibernate.validator:hibernate-validator:${hibernateValidatorVersion}"

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'org.postgresql:postgresql'

    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // PostgreSQL JDBC Driver (для dev и production)
    runtimeOnly 'org.postgresql:postgresql'

    // H2 Database (только для тестов)
    testRuntimeOnly 'com.h2database:h2:2.3.232'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.assertj:assertj-core:3.24.2'

    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'


}

jte {
    sourceDirectory = file("src/main/resources/jte").toPath()
    contentType = "Html"
    binaryStaticContent = false
}

checkstyleMain {
    group = 'verification'
}

checkstyleTest {
    group = 'verification'
}

checkstyle {
    toolVersion = '10.12.4'  // актуальная версия на 2025 год для Gradle 9.1
    maxErrors = 0      // даже 1 ошибка (severity=error) → BUILD FAILED
    maxWarnings = 999  // предупреждения (severity=warning) не блокируют сборку
    showViolations = true
    configFile = file('config/checkstyle/checkstyle.xml')

}

jacoco {
    toolVersion = '0.8.14'  // актуальная версия на 2025 год с поддержкой Java 25
}

test {
    useJUnitPlatform()
}


jacocoTestReport {
    dependsOn test
    reports {
        xml.required = false
        csv.required = false
        html.required = true
        html.outputLocation = layout.buildDirectory.dir('reports/jacoco/test/html')
    }


    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect { dir ->
            fileTree(dir: dir, exclude: [
                    '**/Main.class',
                    '**/Application.class'
            ])
        }))
    }
}


jacocoTestCoverageVerification {
    dependsOn jacocoTestReport
    violationRules {
        rule {
            limit {
                minimum = 0.80  // 80% покрытия инструкций
            }
        }
    }


    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect { dir ->
            fileTree(dir: dir, exclude: [
                    '**/Main.class',
                    '**/Application.class'
            ])
        }))
    }
}


check {
    dependsOn jacocoTestCoverageVerification
}